# ratatui-zonekit

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release-plz.yml
src/: lib.rs  plugin.rs  registry.rs  render.rs  zone.rs
